[package]
name = "tree-sitter-candid"
description = "Candid grammar for tree-sitter"
version = "0.1.0"
authors = ["Yota Inomoto <yota@perforate.org>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "candid"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/perforate-org/tree-sitter-candid"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.6"
